--- a/lab5-immproved.html
+++ b/lab5-immproved.html
@@ -16,13 +16,13 @@
         background-color: black;
     }
 
-    div#content {
+    section#content {
         margin: 6px;
         padding: 12px;
         background-color: lightgrey;
     }
 
-    div.article {
+    article.article {
         margin: 6px;
         padding: 12px;
         background-color: white;
@@ -53,17 +53,17 @@
             </ul>
         </nav>
 
-        <div id="content">
+        <section id="content">
             <h2>Best Treats</h2>
-            <div class="article">
+            <article class="article">
                 <h2>Dessert Jelly-O</h2>
                 <p>Dessert jelly-o macaroon carrot cake danish. Sweet roll sweet roll lemon drops carrot cake gingerbread cake cotton candy. Dessert caramels jelly dessert. Tootsie roll chupa chups candy canes fruitcake. Brownie gummies icing macaroon chocolate bar. Muffin brownie icing topping powder. Sweet tiramisu candy dessert chupa chups candy soufflé. Pie marshmallow lemon drops bear claw sesame snaps chupa chups carrot cake pie liquorice. Gummies croissant croissant cookie tart wafer cheesecake sesame snaps. Caramels sweet roll dragée. Sugar plum powder cake liquorice danish tootsie roll. Sweet toffee sweet roll cupcake ice cream.</p>
-            </div>
-            <div class="article">
+            </article>
+            <article class="article">
                 <h2>News Article</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est nibh, et consectetur tortor feugiat at.</p>
-            </div>
-        </div>
+            </article>
+        </section>
 
         <footer id="footer">
             <p>&amp;copy; 2018 Monday Times. All rights reserved.</p>
